Version 0.2.3
------------------------------------------------------------------------
22 August 2007
+ Changed h1 headers to h2
+ Updated: templates/search_page.tpl

Version 0.2.2
------------------------------------------------------------------------
5 April 2007
+ Updated translation functions.
+ Added German translation files.

Version 0.2.1
------------------------------------------------------------------------
19 February 2007
+ Added translate functions

Version 0.2.0
------------------------------------------------------------------------
27 November 2006
+ Moved deletion of keyword to its own function
+ Fixed javascript confirmation on item deletion
+ Deletion of keyword is now htmlentitified to catch foreign
  characters
+ Added resetKeywords function
+ FilterWords now has a htmlentities parameter and allows foreign
  characters (bug #1602039). Thanks WeBToR
+ Config file is no longer hardcoded. Now picks file based on language.
+ If all search words are undersized, search will not throw an
  error anymore.

Version 0.1.1
-------------------------------------------------------------------------
21 September 2006
+ Retitled key unregistration function