@@ -1,5 +1,6 @@
 <div id="search-box">
 {START_FORM}
 {SEARCH} {GO}
+<div id="search-alternates">{ALTERNATE_1} {ALTERNATE_1_LABEL} {ALTERNATE_2} {ALTERNATE_2_LABEL} {ALTERNATE_3} {ALTERNATE_3_LABEL}</div>
 {END_FORM}
 </div>
